--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "gulp build",
     "start": "gulp dev",
-    "test": "stylelint \"src/scss/**/*.scss\" --config .stylelintrc.json --customSyntax postcss-scss --fix"
+    "test": "stylelint \"src/scss/**/*.scss\" --config .stylelintrc.json --customSyntax postcss-scss --fix",
+    "lintscss": "stylelint \"src/scss/**/about.scss\" --config .stylelintrc.json --customSyntax postcss-scss"
   },
   "repository": {
     "type": "git",
@@ -41,12 +42,17 @@
     "gulp-svgmin": "^4.1.0",
     "gulp-svgstore": "^9.0.0",
     "gulp-uglify": "^3.0.2",
+    "postcss-bem-linter": "^3.3.0",
     "postcss-scss": "^4.0.4",
     "stylelint": "^14.8.2",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-scss": "^4.2.0",
     "webpack": "^5.72.1",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "stylelint-selector-bem-pattern": "^2.1.1"
   }
 }
