сделал шапку для главной с картинкой + очередные правки стайллинта

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -20,7 +20,7 @@
     ],
     "selector-class-pattern": "^[a-z]([a-z0-9-]+)?(__([a-z0-9]+-?)+)?(--([a-z0-9]+-?)+){0,2}$|^Mui.*$",
     "color-hex-case": "lower",
-    "color-hex-length": "short",
+    "color-hex-length": "long",
     "color-no-invalid-hex": true,
     "number-max-precision": 3,
     "number-no-trailing-zeros": true,
