--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-gulp",
+  "name": "phg",
   "version": "1.0.0",
-  "description": "Каркас для разработки",
+  "description": "СБорка для powerhouse gym",
   "main": "gulpfile.js",
   "type": "module",
   "scripts": {
@@ -16,20 +16,20 @@
   "author": "Marty",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Marty2506/my-gulp/issues"
+    "url": "https://github.com/Marty2506/phg/issues"
   },
-  "homepage": "https://github.com/Marty2506/my-gulp#readme",
+  "homepage": "https://github.com/Marty2506/phg#readme",
   "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/preset-env": "^7.19.1",
-    "browser-sync": "^2.27.9",
-    "del": "^6.0.0",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^10.4.13",
+    "browser-sync": "^2.27.11",
+    "cssnano": "^5.1.14",
+    "del": "^7.0.0",
     "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-csscomb": "^3.1.0",
-    "gulp-csso": "^4.0.1",
     "gulp-dart-sass": "^1.0.2",
     "gulp-data": "^1.3.1",
     "gulp-htmlmin": "^5.0.1",
@@ -38,20 +38,22 @@
     "gulp-notify": "^4.0.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.3",
+    "gulp-replace": "^1.1.4",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svgmin": "^4.1.0",
     "gulp-svgstore": "^9.0.0",
     "gulp-uglify": "^3.0.2",
     "postcss-bem-linter": "^3.3.0",
-    "postcss-scss": "^4.0.4",
-    "stylelint": "^14.8.2",
-    "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-config-standard-scss": "^5.0.0",
-    "stylelint-scss": "^4.2.0",
-    "webpack": "^5.72.1",
+    "postcss-scss": "^4.0.6",
+    "prettier": "2.8.4",
+    "stylelint": "^14.16.0",
+    "stylelint-config-recess-order": "^3.1.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-scss": "^4.3.0",
+    "webpack": "^5.75.0",
     "webpack-stream": "^7.0.0"
   }
 }
