--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-svgstore": "^9.0.0",
     "gulp-uglify": "^3.0.2",
     "postcss-bem-linter": "^3.3.0",
+    "postcss-media-minmax": "^5.0.0",
     "postcss-scss": "^4.0.6",
     "prettier": "2.8.4",
     "stylelint": "^14.16.0",
