--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "gulp-dart-sass": "^1.0.2",
     "gulp-data": "^1.3.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-libsquoosh": "^1.1.2",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^4.0.0",
     "gulp-nunjucks-render": "^2.2.3",
@@ -49,12 +48,17 @@
     "postcss-media-minmax": "^5.0.0",
     "postcss-scss": "^4.0.6",
     "prettier": "2.8.4",
+    "sharp": "^0.32.4",
     "stylelint": "^14.16.0",
     "stylelint-config-recess-order": "^3.1.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-scss": "^4.3.0",
+    "through2": "^4.0.2",
     "webpack": "^5.75.0",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "stream-to-string": "^1.2.1"
   }
 }
